--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.15.1", features = ["extension-module"] }
-numpy = "0.15"
+numpy = { vertsion = "0.15", features = ["rayon"] }
 ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }
+num = "0.4.0"
+rayon = "1.5"
+ndarray = "0.15.4"
