--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ ipython_config.py
 # pyenv
 .python-version
 
+# Datagen stuff
+*.pickle
+
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
@@ -64,6 +67,8 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
+
+__pycache__/
 
 # Celery stuff
 celerybeat-schedule
