--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,28 +1,66 @@
+absl-py==1.0.0
 astor==0.8.1
 astunparse==1.6.3
 black==22.1.0
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.11
 click==8.0.3
 colorama==0.4.4
 debugpy==1.5.1
 dill==0.3.4
 flake8==4.0.1
+flatbuffers==2.0
+gast==0.5.3
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
 greenlet==1.1.2
+grpcio==1.43.0
+h5py==3.6.0
+idna==3.3
+importlib-metadata==4.10.1
 isort==5.10.1
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+libclang==13.0.0
+loguru==0.6.0
+Markdown==3.3.6
 mccabe==0.6.1
 msgpack==1.0.3
 mypy-extensions==0.4.3
 neovim==0.3.1
 numpy==1.22.2
+oauthlib==3.2.0
+opt-einsum==3.3.0
 pandas==1.4.0
 pathspec==0.9.0
 platformdirs==2.5.0
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pynvim==0.4.3
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
 six==1.16.0
 sourceinspect==0.0.4
 taichi==0.8.11
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow-gpu==2.8.0
+tensorflow-io-gcs-filesystem==0.24.0
+termcolor==1.1.0
+tf-estimator-nightly==2.8.0.dev2021122109
 tomli==2.0.1
+tqdm==4.62.3
 typing_extensions==4.0.1
+urllib3==1.26.8
+Werkzeug==2.0.3
+wrapt==1.13.3
+zipp==3.7.0
